--- a/Ex19/app/src/main/res/values/strings.xml
+++ b/Ex19/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Ex19</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">메인 프래그먼트</string>
 </resources>
